fixed icon sizing on small screens

--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-.container {
-  border: none;
-}
 .accordion-button:not(.collapsed) {
     color: white  !important;
     background-color: black !important;
